// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/BadgeModifiers default 1`] = `
.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  background: transparent;
  border: none;
  color: rgb(242,143,34);
  padding: 6px;
  font-size: 15px;
  cursor: pointer;
}

.c2:disabled {
  color: rgb(255,244,233);
  cursor: not-allowed;
}

.c0 {
  width: 70px;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="badge-modifiers-Test"
  >
    <button
      class="c2"
      data-testid="decrease-Test"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    <button
      class="c2"
      data-testid="increase-Test"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/BadgeModifiers disabled 1`] = `
.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  background: transparent;
  border: none;
  color: rgb(242,143,34);
  padding: 6px;
  font-size: 15px;
  cursor: pointer;
}

.c2:disabled {
  color: rgb(255,244,233);
  cursor: not-allowed;
}

.c0 {
  width: 70px;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="badge-modifiers-Test"
  >
    <button
      class="c2"
      data-testid="decrease-Test"
      disabled=""
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    <button
      class="c2"
      data-testid="increase-Test"
      disabled=""
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </div>
</div>
`;
